WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189844
[GTK] ANGLE's eglplatform.h does not support Wayland-only builds
https://bugs.webkit.org/show_bug.cgi?id=189844
Summary
[GTK] ANGLE's eglplatform.h does not support Wayland-only builds
Adrian Perez
Reported
2018-09-21 11:56:41 PDT
The latest ANGLE update (from
r225340
) is causing another instance of
bug #163482
The upstream maintainers decided to apply their own version of the patch that I had attached in the upstream bug, which lacks one of the hunks from the patch I had uploaded. This is the upstream bug report:
https://bugs.chromium.org/p/angleproject/issues/detail?id=2105
The missing bits *are* needed, so let's re-add them. I will give it a try to have also the changes upstream later on.
Attachments
Patch
(3.22 KB, patch)
2018-09-21 12:11 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2018-09-21 12:11:12 PDT
Created
attachment 350399
[details]
Patch
EWS Watchlist
Comment 2
2018-09-21 12:13:37 PDT
Note that there are important steps to take when updating ANGLE. See
http://trac.webkit.org/wiki/UpdatingANGLE
Adrian Perez
Comment 3
2018-09-21 12:14:22 PDT
JFTR, I have successfully tested this using Buildroot to compile an image for the RaspberryPi 3 configured with Wayland, no X11, and WebKitGTK+ (both “trunk” and 2.22.1 — the patch applies cleanly on the stable release).
Michael Catanzaro
Comment 4
2018-09-21 12:20:53 PDT
Comment on
attachment 350399
[details]
Patch r=me provided you try again to upstream this.
WebKit Commit Bot
Comment 5
2018-09-21 13:00:02 PDT
Comment on
attachment 350399
[details]
Patch Clearing flags on attachment: 350399 Committed
r236349
: <
https://trac.webkit.org/changeset/236349
>
WebKit Commit Bot
Comment 6
2018-09-21 13:00:04 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-09-21 13:01:58 PDT
<
rdar://problem/44689720
>
Adrian Perez
Comment 8
2018-09-22 02:32:41 PDT
(In reply to Michael Catanzaro from
comment #4
)
> Comment on
attachment 350399
[details]
> Patch > > r=me provided you try again to upstream this.
Indeed! I had opened an issue upstream, but forgot to mentioned it here:
https://bugs.chromium.org/p/angleproject/issues/detail?id=2839
Let's see if this time upstream adopts the full patch instead of merging a half-baked version (which is what happened last time).
Pablo Saavedra
Comment 9
2022-03-30 10:10:44 PDT
This change is not longer there (not at least in WebKitGTK/WPEWebKit 2.36.0). I think that was removed by a later ANGLE new version rollout.
Adrian Perez
Comment 10
2022-03-30 12:45:12 PDT
(In reply to Pablo Saavedra from
comment #9
)
> This change is not longer there (not at least in WebKitGTK/WPEWebKit > 2.36.0). I think that was removed by a later ANGLE new version rollout.
Right, nowadays we define USE_SYSTEM_EGL for building ANGLE, which gets us the same net result without needing to maintain changes to ANGLE :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug