[GTK] ANGLE's eglplatform.h does not support Wayland-only builds https://bugs.webkit.org/show_bug.cgi?id=189844

Reviewed by Michael Catanzaro.

This makes it possible to build WebKitGTK+ after r225340 when the
build is configured to support only Wayland, and the X11 headers
are not present.

* changes.diff: Updated.
* include/EGL/eglplatform.h: Include the X11 headers only when
ANGLE_USE_X11 is defined and, for consistency with Mesa's version
of the header, when MESA_EGL_NO_X11_HEADERS is not defined.


Canonical link: https://commits.webkit.org/204807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236349 268f45cc-cd09-0410-ab3c-d52691b4dbfc